--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/image/icon.png" type="/">
+    <link rel="icon" href="./image/icon.png" type="/">
     <title>Shumilana Tania information</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
